<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/outer"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Arriba"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="422dp"
        android:background="@color/uranian"
        app:layout_constraintBottom_toTopOf="@+id/Abajo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <TextView
            android:id="@+id/TextoArriba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/air"
            android:textColor="#263238"
            android:text="@string/textoArriba"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@color/air"
            android:text="@string/checkbox"
            android:textColor="#263238"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/air"
            android:minHeight="4dp"
            android:text="@string/switch_button"
            android:textColor="#263238"
            app:layout_constraintBottom_toTopOf="@id/checkBox"
            app:layout_constraintEnd_toStartOf="@id/checkBox"
            app:layout_constraintStart_toEndOf="@id/TextoArriba"
            app:layout_constraintTop_toBottomOf="@id/TextoArriba"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Abajo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Arriba">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DentroArriba"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/uranian"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/DentroMedio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintVertical_chainStyle="spread">

            <Button
                android:id="@+id/button1f1p2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/boton_1_fila_1_peso_2"
                android:backgroundTint="@color/payne"
                android:layout_marginEnd="5dp"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button2f1p1"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/button2f1p1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/boton_2_fila_1_peso_1"
                android:backgroundTint="@color/payne"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/button1f1p2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DentroMedio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/DentroArriba"
            app:layout_constraintBottom_toTopOf="@id/DentroAbajo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1">

            <Button
                android:id="@+id/button1f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/air"
                android:textSize="11sp"
                android:text="@string/boton_1_f2"
                android:textColor="#263238"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button2f2"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/air"
                android:textSize="11sp"
                android:text="@string/boton_2_f2"
                android:textColor="#263238"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button3f2"
                app:layout_constraintStart_toEndOf="@id/button1f2"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3f2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/air"
                android:textSize="11sp"
                android:text="@string/boton_3_f2"
                android:textColor="#263238"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button2f2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DentroAbajo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="5dp"
            android:background="@color/air"
            app:layout_constraintTop_toBottomOf="@id/DentroMedio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1">

            <Button
                android:id="@+id/button1f3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/uranian"
                android:text="@string/boton_1_f3"
                android:textColor="#6D4C41"
                android:textSize="5sp"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button2f3"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2f3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/boton_2_f3"
                android:backgroundTint="@color/uranian"
                android:textColor="#6D4C41"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/button1f3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>